[gd_scene load_steps=8 format=3 uid="uid://b2d1563rjjffw"]

[ext_resource type="Script" path="res://world.gd" id="1_7ptxl"]
[ext_resource type="PackedScene" uid="uid://8xo7mq2rhm7y" path="res://player.tscn" id="2_3h7qb"]
[ext_resource type="PackedScene" uid="uid://qrlaq0yyhew6" path="res://level_completed.tscn" id="5_w6tb3"]
[ext_resource type="PackedScene" uid="uid://bqge6580u2yvm" path="res://level_tile_map.tscn" id="6_dnux8"]

[sub_resource type="Animation" id="Animation_56gcj"]
resource_name = "countdown"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in 3", "Start in 2", "Start in 1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3too0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in 3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cs1fu"]
_data = {
"RESET": SubResource("Animation_3too0"),
"countdown": SubResource("Animation_56gcj")
}

[node name="World" type="Node2D"]
script = ExtResource("1_7ptxl")

[node name="Player" parent="." instance=ExtResource("2_3h7qb")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_w6tb3")]
visible = false

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Start in 3"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 19.0
grow_horizontal = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(52, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 12
vertical_alignment = 1

[node name="LevelTileMap" parent="." instance=ExtResource("6_dnux8")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_cs1fu")
}

[connection signal="next_level" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_next_level"]
[connection signal="retry" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_retry"]
